<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jules.android.gui.ui.HomeFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/navigation_commands"
        android:name="com.jules.android.gui.ui.CommandsFragment"
        android:label="@string/title_commands" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.jules.android.gui.ui.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.jules.android.gui.ui.AboutFragment"
        android:label="@string/title_about" />

</navigation>
